# devpack

./: .gitignore  CONTRIBUTING.md  claude.md  error.txt  error2.txt  pyproject.toml  readme.md
.claude/agents/: codebase-onboarder.md  init-python-backend.md
.claude/agents/references/: django-init.md
.claude/skills/create-system-design/: SKILL.md
.claude/skills/init-backend/: SKILL.md
.claude/skills/init-backend/references/: django-init.md  fastapi-init.md
.claude/skills/init-system-design/: SKILL.md
.claude/skills/prompt-optimizer/: SKILL.md
.claude/skills/prompt-optimizer/references/: best-practices.md
.claude/skills/refine-feature/: SKILL.md
.claude/skills/refine-project/: SKILL.md
.claude/skills/resume-summary/: SKILL.md
.github/workflows/: publish.yml  test.yml
docs/: ai-stack-detection.md  devpack-expansion-plan.md  features.md  mvp-implementation.md  project-brief.md  project-overview.md  references.md  system-design.md
src/devpack/: ai_config_writer.py  claude_agent.py  cli.py  config.py  detector.py  guide_writer.py  matcher.py  models.py  probe_agent.py  prompter.py  readme_updater.py  test.py  writer.py
src/devpack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/devpack/registry/: known_ids.py  technologies.py
src/devpack/starterpack/agent-skills/accessibility-best-practices/: SKILL.md
src/devpack/starterpack/agent-skills/django-best-practices/: SKILL.md
src/devpack/starterpack/agent-skills/django-docs/: SKILL.md
src/devpack/starterpack/agents/: codebase-onboarder.md  pr-reviewer.md
src/devpack/starterpack/frontend-general/: accessibility-best-practices.md  website-tags-best-practices.md
starterpack/agent-skills/django-best-practices/: SKILL.md
starterpack/agent-skills/django-best-practices/rules/: async-views.md  cache-querysets.md  db-bulk-operations.md  db-connection-pooling.md  db-f-expressions.md  db-indexes.md  db-iterator.md  db-only-defer.md  deploy-health-check.md  security-allowed-hosts.md  security-csrf.md  security-mass-assignment.md  security-password-hashing.md  static-cache-busting.md  static-collectstatic.md  static-no-django-serve.md  static-upload-validation.md  structure-app-urls.md  structure-related-names.md  structure-thin-views.md  testing-factories.md  testing-sqlite-memory.md  testing-write-tests.md  tooling-migrations.md  tooling-type-hints.md
starterpack/agent-skills/optimize-lighthouse-metrics/: SKILL.md
starterpack/agent-skills/react-docs/: SKILL.md
starterpack/agent-skills/website-tags-best-practices/references/: checklist.md
starterpack/django/: django-best-practices.md
tests/: test_ai_config_writer.py  test_detector.py  test_matcher.py  test_writer.py
tests/fixtures/django_repo/: requirements.txt
tests/fixtures/node_repo/: package.json
tests/fixtures/react_repo/: package.json
(+41 files in other folders)
