[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "repopack"
dynamic = ["version"]
description = "CLI tool that helps developers add agent skills to an existing repo based on the detected tech stack."
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Diego Ramirez", email = "diegojramirezs7@gmail.com" }]
keywords = ["cli", "ai", "developer-tools", "claude", "agent-skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12",
    "inquirerpy>=0.3",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "claude-agent-sdk>=0.1.38",
]

[project.urls]
Homepage = "https://github.com/diegojramirezs7/devpack"
Repository = "https://github.com/diegojramirezs7/devpack"
"Bug Tracker" = "https://github.com/diegojramirezs7/devpack/issues"

[project.scripts]
devpack = "devpack.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devpack = ["starterpack/**/*"]

[tool.setuptools_scm]
# Falls back to this version when building from a checkout with no git tags.
# Once you push a tag (e.g. v0.2.0), that tag becomes the version automatically.
fallback_version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires ANTHROPIC_API_KEY; skip with -m 'not integration'",
]
